--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- My Style -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
     <!-- Navbar Start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">4b1naya<span>GL.</span></a>
+      <a href="#" class="navbar-logo">abinaya_<span>4o4</span></a>
 
       <div class="navbar-nav">
-        <a href="index.html">Home</a>
-        <a href="About.html">About Me</a>
-        <a href="Sosmed.html">Social Media</a>
-        <a href="Creation.html">Galery</a>
+        <a href="#home">Home</a>
+        <a href="#About Me">About Me</a>
+        <a href="#Sosmed">Social Media</a>
+        <a href="#Creation">Projects</a>
       </div>
 
       <div class="navbar-extra">
@@ -42,19 +42,108 @@
     <!-- Hero Section start -->
     <section class="hero" id="home">
       <main class="content">
-        <h1>Welcome</h1>
-        <p>WebPersonal of Kheira Abinaya</p>
+        <h1>Kheira Abinaya</h1>
+        <p>
+          "Many people are blind, not because they cannot see, but because they
+          do not know what is in front of them."
+        </p>
       </main>
     </section>
     <!-- Hero Section end -->
 
+    <!-- About Me Section Start-->
+    <section id="About Me" class="About">
+      <h2>About Me</h2>
+
+      <div class="row">
+        <div class="About-img">
+          <img src="assets/img/Khei.JPG" alt="About Me" />
+        </div>
+
+        <div class="content">
+          <p>
+            My name is Kheira Abinaya Gavin Lovedila, usually called Kheira. I
+            am currently a student at SMK N 7 SEMARANG, majoring in Network
+            Information Systems and Applications because I have a high interest
+            in technology, Ai, and Web Development. I am able to work in a team,
+            think creatively, and keep learning new things that support my
+            future career in technology.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- About Me Section End-->
+
+    <!-- Sosial Media Section Start-->
+    <section id="Sosmed" class="Sosmed">
+      <h2>Social Media</h2>
+
+      <div class="row">
+        <div class="Sosmed-card">
+          <a
+            href="https://instagram.com/callme_v1ns?igshid=OGQ5ZDc2ODk2ZA=="
+            id="instagram"
+            ><i data-feather="instagram"></i
+          ></a>
+          <h3 class="Sosmed-card-title">Instagram</h3>
+        </div>
+
+        <div class="Sosmed-card">
+          <a
+            href="https://www.linkedin.com/in/kheira-abinaya-677ba2286"
+            id="linkedin"
+            ><i data-feather="linkedin"></i
+          ></a>
+          <h3 class="Sosmed-card-title">Linked</h3>
+        </div>
+
+        <div class="Sosmed-card">
+          <a href="https://github.com/481n4y4" id="github"
+            ><i data-feather="github"></i
+          ></a>
+          <h3 class="Sosmed-card-title">GitHub</h3>
+        </div>
+
+        <div class="Sosmed-card">
+          <a href="https://x.com/481N4Y4?t=tqccdfFj2wAns1cZ3GVSqA&s=08" id="x"
+            ><i data-feather="x"></i
+          ></a>
+          <h3 class="Sosmed-card-title">x</h3>
+        </div>
+
+        <div class="Sosmed-card">
+          <a
+            href="https://www.facebook.com/kheira.abinaya?mibextid=ZbWKwL"
+            id="facebook"
+            ><i data-feather="facebook"></i
+          ></a>
+          <h3 class="Sosmed-card-title">Facebook</h3>
+        </div>
+      </div>
+    </section>
+    <!-- Sosial Media Section End-->
+
+    <!-- Creation Section Start -->
+    <section id="Creation" class="Creation">
+      <h2>Projects</h2>
+
+      <h3><li>Buku Digital Bahasa Inggris Kelas 7</li></h3>
+      <a href="#" class="cta">Buku Digital</a>
+
+      <h3><li>Bid Battle Store</li></h3>
+      <a href="https://481n4y4.github.io/Bid-Battle-Store/" class="cta"
+        >Store</a
+      >
+    </section>
+    <!-- Creation Section End -->
+
     <!-- Footer Section Start -->
     <footer class="footer">
       <div class="links">
-        <a href="index.html">#Home</a>
-        <a href="About.html">#About</a>
-        <a href="Sosmed.html">#Social Media</a>
-        <a href="Creation.html">#Creation</a>
+        <a href="#home">#Home</a>
+        <a href="#About Me">#About Me</a>
+        <a href="#Sosmed">#Social Media</a>
+        <a href="#Creation">#Projects</a>
       </div>
 
       <div class="credit">
@@ -69,6 +158,6 @@
     </script>
 
     <!-- My Javascript -->
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
