penambahan ability dan contact

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#About Me">About Me</a>
-        <a href="#Sosmed">Social Media</a>
+        <a href="#abilitiy">Ability</a>
         <a href="#Creation">Projects</a>
+        <a href="#Sosmed">Contact</a>
       </div>
 
       <div class="navbar-extra">
@@ -43,10 +44,7 @@
     <section class="hero" id="home">
       <main class="content">
         <h1>Kheira Abinaya</h1>
-        <p>
-          "Many people are blind, not because they cannot see, but because they
-          do not know what is in front of them."
-        </p>
+        <p>Web Development Enthusiast & Junior In Front End Development</p>
       </main>
     </section>
     <!-- Hero Section end -->
@@ -61,6 +59,7 @@
         </div>
 
         <div class="content">
+          <h3>Who is Kheira?</h3>
           <p>
             My name is Kheira Abinaya Gavin Lovedila, usually called Kheira. I
             am currently a student at SMK N 7 SEMARANG, majoring in Network
@@ -74,54 +73,15 @@
     </section>
     <!-- About Me Section End-->
 
-    <!-- Sosial Media Section Start-->
-    <section id="Sosmed" class="Sosmed">
-      <h2>Social Media</h2>
-
+    <!-- Ability Section Start-->
+    <section class="ability" id="ability">
+      <h2>Ability</h2>
       <div class="row">
-        <div class="Sosmed-card">
-          <a
-            href="https://instagram.com/callme_v1ns?igshid=OGQ5ZDc2ODk2ZA=="
-            id="instagram"
-            ><i data-feather="instagram"></i
-          ></a>
-          <h3 class="Sosmed-card-title">Instagram</h3>
-        </div>
-
-        <div class="Sosmed-card">
-          <a
-            href="https://www.linkedin.com/in/kheira-abinaya-677ba2286"
-            id="linkedin"
-            ><i data-feather="linkedin"></i
-          ></a>
-          <h3 class="Sosmed-card-title">Linked</h3>
-        </div>
-
-        <div class="Sosmed-card">
-          <a href="https://github.com/481n4y4" id="github"
-            ><i data-feather="github"></i
-          ></a>
-          <h3 class="Sosmed-card-title">GitHub</h3>
-        </div>
-
-        <div class="Sosmed-card">
-          <a href="https://x.com/481N4Y4?t=tqccdfFj2wAns1cZ3GVSqA&s=08" id="x"
-            ><i data-feather="x"></i
-          ></a>
-          <h3 class="Sosmed-card-title">x</h3>
-        </div>
-
-        <div class="Sosmed-card">
-          <a
-            href="https://www.facebook.com/kheira.abinaya?mibextid=ZbWKwL"
-            id="facebook"
-            ><i data-feather="facebook"></i
-          ></a>
-          <h3 class="Sosmed-card-title">Facebook</h3>
-        </div>
+        <div class="hard"></div>
+        <div class="soft"></div>
       </div>
     </section>
-    <!-- Sosial Media Section End-->
+    <!-- Ability Section End-->
 
     <!-- Creation Section Start -->
     <section id="Creation" class="Creation">
@@ -136,6 +96,81 @@
       >
     </section>
     <!-- Creation Section End -->
+
+    <!-- Sosial Media Section Start-->
+    <section id="Contact" class="Sosmed">
+      <h2>Contact</h2>
+
+      <div class="contact-container">
+        <form action="" class="contact-left">
+          <input type="hidden" name="access_key" value="" />
+          <input
+            type="text"
+            name="name"
+            placeholder="Your Name"
+            class="contact-inputs"
+            required
+          />
+          <input
+            type="email"
+            name="email"
+            placeholder="Your Email"
+            class="contact-inputs"
+            required
+          />
+          <textarea
+            name="message"
+            placeholder="Your Message"
+            class="contact-inputs"
+            required
+          ></textarea>
+          <button type="submit">Submit</button>
+        </form>
+        <div class="contact-right row">
+          <div class="Sosmed-card">
+            <a
+              href="https://instagram.com/callme_v1ns?igshid=OGQ5ZDc2ODk2ZA=="
+              id="instagram"
+              ><i data-feather="instagram"></i
+            ></a>
+            <h3 class="Sosmed-card-title">Instagram</h3>
+          </div>
+
+          <div class="Sosmed-card">
+            <a
+              href="https://www.linkedin.com/in/kheira-abinaya-677ba2286"
+              id="linkedin"
+              ><i data-feather="linkedin"></i
+            ></a>
+            <h3 class="Sosmed-card-title">Linked</h3>
+          </div>
+
+          <div class="Sosmed-card">
+            <a href="https://github.com/481n4y4" id="github"
+              ><i data-feather="github"></i
+            ></a>
+            <h3 class="Sosmed-card-title">GitHub</h3>
+          </div>
+
+          <div class="Sosmed-card">
+            <a href="https://x.com/481N4Y4?t=tqccdfFj2wAns1cZ3GVSqA&s=08" id="x"
+              ><i data-feather="x"></i
+            ></a>
+            <h3 class="Sosmed-card-title">x</h3>
+          </div>
+
+          <div class="Sosmed-card">
+            <a
+              href="https://www.facebook.com/kheira.abinaya?mibextid=ZbWKwL"
+              id="facebook"
+              ><i data-feather="facebook"></i
+            ></a>
+            <h3 class="Sosmed-card-title">Facebook</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Sosial Media Section End-->
 
     <!-- Footer Section Start -->
     <footer class="footer">
