pembaruan untuk bagian contact

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       rel="stylesheet"
     />
 
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+
     <!-- Feather Icons -->
     <script src="https://unpkg.com/feather-icons"></script>
 
@@ -102,8 +108,16 @@
       <h2>Contact</h2>
 
       <div class="contact-container">
-        <form action="" class="contact-left">
-          <input type="hidden" name="access_key" value="" />
+        <form
+          action="https://api.web3forms.com/submit"
+          method="POST"
+          class="contact-left"
+        >
+          <input
+            type="hidden"
+            name="access_key"
+            value="4b01bfae-9d39-4341-a30d-554d890f359f"
+          />
           <input
             type="text"
             name="name"
@@ -126,47 +140,54 @@
           ></textarea>
           <button type="submit">Submit</button>
         </form>
-        <div class="contact-right row">
-          <div class="Sosmed-card">
-            <a
-              href="https://instagram.com/callme_v1ns?igshid=OGQ5ZDc2ODk2ZA=="
-              id="instagram"
-              ><i data-feather="instagram"></i
-            ></a>
-            <h3 class="Sosmed-card-title">Instagram</h3>
-          </div>
+        <div class="contact-right">
+          <img src="assets/img/contact.png" alt="" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="Sosmed-card">
+          <a
+            href="https://www.instagram.com/abinaya_4o4?igsh=MWMwZzRqaTNtbjkxbw=="
+            id="instagram"
+          >
+            <i class="fab fa-instagram"></i>
+          </a>
+          <h3 class="Sosmed-card-title">Instagram</h3>
+        </div>
 
-          <div class="Sosmed-card">
-            <a
-              href="https://www.linkedin.com/in/kheira-abinaya-677ba2286"
-              id="linkedin"
-              ><i data-feather="linkedin"></i
-            ></a>
-            <h3 class="Sosmed-card-title">Linked</h3>
-          </div>
+        <div class="Sosmed-card">
+          <a
+            href="https://www.linkedin.com/in/kheira-abinaya-677ba2286"
+            id="linkedin"
+          >
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <h3 class="Sosmed-card-title">Linked</h3>
+        </div>
 
-          <div class="Sosmed-card">
-            <a href="https://github.com/481n4y4" id="github"
-              ><i data-feather="github"></i
-            ></a>
-            <h3 class="Sosmed-card-title">GitHub</h3>
-          </div>
+        <div class="Sosmed-card">
+          <a href="https://github.com/481n4y4" id="github">
+            <i class="fab fa-github"></i>
+          </a>
+          <h3 class="Sosmed-card-title">GitHub</h3>
+        </div>
 
-          <div class="Sosmed-card">
-            <a href="https://x.com/481N4Y4?t=tqccdfFj2wAns1cZ3GVSqA&s=08" id="x"
-              ><i data-feather="x"></i
-            ></a>
-            <h3 class="Sosmed-card-title">x</h3>
-          </div>
+        <div class="Sosmed-card">
+          <a
+            href="https://www.facebook.com/kheira.abinaya?mibextid=ZbWKwL"
+            id="facebook"
+          >
+            <i class="fab fa-facebook"></i>
+          </a>
+          <h3 class="Sosmed-card-title">Facebook</h3>
+        </div>
 
-          <div class="Sosmed-card">
-            <a
-              href="https://www.facebook.com/kheira.abinaya?mibextid=ZbWKwL"
-              id="facebook"
-              ><i data-feather="facebook"></i
-            ></a>
-            <h3 class="Sosmed-card-title">Facebook</h3>
-          </div>
+        <div class="Sosmed-card">
+          <a href="https://wa.me/6285179902663" id="whatsapp">
+            <!-- Ganti dengan no HP kamu -->
+            <i class="fab fa-whatsapp"></i>
+          </a>
+          <h3 class="Sosmed-card-title">Whatsapp</h3>
         </div>
       </div>
     </section>
